@@ -75,9 +75,7 @@
 
 @lber_h@
 @ldap_h@
-#if APR_HAS_LDAP_SSL 
 @ldap_ssl_h@
-#endif
 
 
 /*
@@ -132,7 +130,7 @@ typedef struct apr_ldap_err_t {
 
 #include "apr_ldap_url.h"
 #include "apr_ldap_init.h"
-
+#include "apr_ldap_option.h"
 
 /** @} */
 #endif /* APR_HAS_LDAP */
